[project]
name = "tradehub"
authors = [
    { name = "TradeHub", email = "info@tradehub.com"}
]
description = "TradeHub B2B Marketplace"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
